traffic-management/request-routing/1-virtual-service-header.yaml
# File virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: notification
spec:
  hosts:
  - notification-service
  http:
  - route:
    - destination:
        host: notification-service
        subset: v2
    match:
    - headers:
        testing:
          exact: "true"
  - route:
    - destination:
        host: notification-service
        subset: v1
