traffic-management/request-routing/2-virtual-service-uri-prefix.yaml
#######################################################################################################################################


# File virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: notification
spec:
  hosts:
  - notification-service
  http:
  - match:
    - uri:
        prefix: "/v2/notify"
    rewrite:
      uri: "/notify"
    route:
    - destination:
        host: notification-service
        subset: v2
  - route:
    - destination:
        host: notification-service
        subset: v1
#######################################################################################################################################
